--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  text-decoration: none;
 }
 
 .logo-web {
@@ -37,7 +38,8 @@ body {
   color: var(--accent-color);
 }
 
-.logo:hover {
+.logo:hover,
+.logo:focus {
   color: var(--accent-color);
 }
 
